<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.BackActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/head_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/get_ready_to_strengthen_your_back"
                android:textColor="@color/purple_200"
                android:textSize="23sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:text="@string/CatCow"
                android:textColor="@color/purple_200"
                android:textSize="23sp" />

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/back1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:text="@string/catcowdes"
                android:textColor="@color/purple_200"
                android:textSize="12sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/dwfdog"
                android:textColor="@color/purple_200"
                android:textSize="18sp"
                android:id="@+id/dwfdog"
                />
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/back2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:text="@string/dwfdogdesc"
                android:textColor="@color/purple_200"
                android:textSize="12sp" />





            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/extriangle"
                android:textColor="@color/purple_200"
                android:textSize="18sp"
                android:id="@+id/extTriangle"
                />
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/back3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:text="@string/extTriangleDesc"
                android:textColor="@color/purple_200"
                android:textSize="12sp" />




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="Two-Knee Spinal Twist"
                android:textColor="@color/purple_200"
                android:textSize="18sp"
                android:id="@+id/kneetwist"
                />
            <pl.droidsonroids.gif.GifImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/back4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="7sp"
                android:text="@string/twokneetwistdesc"
                android:layout_marginBottom="15dp"
                android:textColor="@color/purple_200"
                android:textSize="12sp" />






        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>