<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".activities.CoreActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/core_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/introtocore"
                android:textSize="23sp"
                android:textColor="@color/purple_200"/>
            <TextView
                android:id="@+id/boat_pose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/purple_200"
                android:text="@string/boat_pose_cap"
                android:layout_marginTop="20sp"/>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/boat_pose"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/purple_200"
                android:textSize="12sp"
                android:text="@string/boat_text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="Doplhin Plank Pose"
                android:textColor="@color/purple_200"
                android:textSize="18sp"
                android:id="@+id/dolphin_plank_pose"
                />
            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/dolphinplank"
                android:id="@+id/dolphin_plank_pic"
                android:adjustViewBounds="true"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/purple_200"
                android:textSize="12sp"
                android:text="@string/dolphin_text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="@string/vwpose"
                android:textColor="@color/purple_200"
                android:textSize="18sp"
                android:id="@+id/victorious_warrior"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/warrior_pose"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/purple_200"
                android:textSize="12sp"
                android:text="@string/warriortext"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:text="Bridge Pose"
                android:textColor="@color/purple_200"
                android:textSize="18sp"
                android:id="@+id/bridgepose"
                />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@mipmap/bridgepose"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:textColor="@color/purple_200"
                android:textSize="12sp"
                android:layout_marginBottom="15dp"

                android:text="@string/Bridgetext" />







        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>