<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="16dp"
    android:layout_height="match_parent"
    android:background="@drawable/home"
    tools:context=".activities.CreateActivity">

    <TextView
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_info"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profile_info"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        android:hint="@string/name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/surname_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_container"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        android:hint="@string/surname">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/surname"
            android:inputType="textPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dob_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/surname_container"
        app:layout_constraintStart_toStartOf="parent"
        app:errorEnabled="true"
        android:hint="@string/date_of_birth">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dob"
            android:inputType="date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        app:layout_constraintTop_toBottomOf="@id/dob_container"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/weight_label"
        style="@android:style/TextAppearance.Widget.TextView.SpinnerItem"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="50dp"
        android:text="@string/weight_label"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/weight_container"
        app:layout_constraintTop_toBottomOf="@id/gender" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        app:layout_constraintStart_toEndOf="@id/weight_label"
        app:layout_constraintTop_toTopOf="@id/weight_label"
        app:layout_constraintBottom_toBottomOf="@id/weight_label"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        android:hint="@string/kg">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_label" />


</androidx.constraintlayout.widget.ConstraintLayout>
